stylesheet.less
/* ... */
.widget.ecomcheckout .checkout-order-button {
  margin: 20px 0px;
}

.widget.ecomcheckout .delivery .delivery-title {
  padding-top: 30px;
}

.productlist-display-form {
  position: relative;
  select {
    height: 42px;
  }
  .productlist-search {
    position: absolute;
    bottom: 0;
    input, button {
      height: 42px;
    }
  }
}

.widget.ecomproductslist label {
  display:block;
}

.btn.ecom-product-go-to-checkout-btn {
  &:hover {
    text-decoration: none;
  }
}

// Ecom Basket Summary

.ecombasketsummary a {
  font-family: @font-swatch7-font-family;
  font-size: @font-swatch7-font-size;
  font-weight: @font-swatch7-font-weight;
}

.basket-summary-product-info a {
  font-family: @font-swatch6-font-family;
  font-size: @font-swatch6-font-size;
  font-weight: @font-swatch6-font-weight;
}

.ecombasket .ecombasket-pull p {
  font-family: @font-swatch7-font-family;
  font-size: @font-swatch7-font-size;
}

.widget.ecombasketsummary {
  padding-top:20px;
  table {
    border-spacing: 0;
    width: 100%;
    list-style: none;
    font-size: 18px;
    color: @color-swatch4;
    margin: 20px 0 30px;
    @media @tablet {
      padding: 0px;
    }
    @media @mobile {
      padding: 0px;
      margin:0px 0px 30px 0px;
    }
    tr:first-child {
          outline: 1px solid darken(@color-swatch1,10%);
            background-color: darken(@color-swatch1,4%);
            -webkit-border-top-left-radius: 4px;
            -webkit-border-top-right-radius: 4px;
            -moz-border-radius-topleft: 4px;
            -moz-border-radius-topright: 4px;
            border-top-left-radius: 4px;
            border-top-right-radius: 4px;
            font-family: @font-swatch4-font-family;
            font-size: 14px;
            font-weight: 400;
            letter-spacing: 1px;
            color: @font-swatch4-color;
            text-transform: uppercase;
            @media @mobile {
                font-size: 12px;
                display: none!important;
            }
      @media @mobile {
        font-size: 12px;
          display: table-header-group;
          th:nth-child(2) {
            display: none;
          }
          th:nth-child(3) {
            padding-left: 12px;
          }
      }
    }
    th {
      text-align: left;
      position: relative;
      left: 20px;
    }
            tr td {
            border-bottom: 1px solid darken(@color-swatch1,10%);
            @media (max-width: 360px) {
                display: table;
                width: 100%;
                border-bottom: 0;
            }
            &:nth-child(1),
            &:nth-child(2) {
                padding: 20px;
                vertical-align: top;
                @media @mobile {
                  padding:20px 0px;
                }
            }
            &:nth-child(2) {
                @media (max-width: 530px) {
                    padding-left: 0;
                }
            }
            &:nth-child(3) {
                padding: 20px;
                margin-top:0;
            }
            // Responsive
            &:nth-child(1) {
                @media (max-width: 360px) {
                    padding-bottom: 0;
                }
            }
            &:nth-child(2),
            &:nth-child(3) {
                @media (max-width: 360px) {
                    padding: 0 20px 0;
                    border-left: 0;
                }
            }
            &:last-child {
                @media (max-width: 360px) {
                    padding: 6px 20px;
                    margin: 20px 0 0;
                    border-bottom: 1px solid darken(@color-swatch1,10%);
                    border-top: 1px solid darken(@color-swatch1,10%);
                }
            }
        }
        tr:last-child td:last-child {
            @media (max-width: 360px) {
                border-top: 0;
                margin-top: 0;
                padding-top: 0;
            }
}
    .basket-summary-items {
      background: transparent;
      @media @tablet {
                img {
            max-width:100px!important;
        }
              @media @mobile {
                img {
            max-width:80px!important;
        }
        display: table-row-group;
        + tr {
          display: block;
        }
      }
  }
      &:last-child {
        td {
          padding-bottom: 25px;
        }
      }
      .image-wrap {
        background-image: none!important;
      }
      td:nth-child(2) {
        padding-left: 15px;
      }
      .basket-summary-pricepu, .basket-summary-quantity, .basket-summary-amount {
        font-size: @font-swatch5-font-size;
        line-height: @font-swatch5-line-height;
        label {
          display:block;
        }
      }
      .basket-summary-pricepu {
        display: block;
      }
      .basket-summary-quantity {
        margin-top: 4px;
      }
      .basket-summary-quantity, .basket-summary-quantitybtn {
        display: inline-block;
        label {
          display:block;
        }
        span {
            padding: 5px 25px 6px;
            margin: 0;
            position: relative;
            top: -2px;
        }
        button {
          width: 30px;
          height: 30px;
          padding: 0;
          box-shadow: none;
          border:0;
          color:@color-swatch1;
          background-color:@color-swatch3;
          margin: 0;
      &:hover {
        background-color:darken(@color-swatch3,10%);
      }
        }
      }
      .basket-summary-amount {
        color: darken(@color-swatch4, 10%);
      }
    }
    .basket-summary-subtotal {
      color: darken(@color-swatch4, 10%);
      display: block;
      font-size: bkscale(@font-swatch5-font-size, 1.05);
      line-height: bkscale(@font-swatch5-font-size, 1.1);
      margin-top: 25px;
      border:2px solid @color-swatch7;
      padding:20px;
      font-weight:700;
    }
  }
}
/* ... */

